fixed timer div

--- a/index.html
+++ b/index.html
@@ -76,7 +76,16 @@
     <div class="js-bubble-container bubble__container"></div>
     <div class="js-notification"></div>
     <div class="session-type"></div>
+    
+    
+
+
     <div class="timer timer--clock">
+
+        <div class="meha-pet">
+            <img src="image/icon--about.svg" alt="">
+        </div>
+
         <div class="js-timer-purpose timer__purpose"></div>
         <span class="js-timer timer__display">00:00</span>
         <div class="show-shortcuts">
@@ -89,6 +98,7 @@
             </div>
         </div>
     </div>
+
     <div class="team">
         <div class="team__list">
             <span class="js-team__list">
