--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Join this Cuckoo Timer!</title>
+    <title>Join this Team Timer!</title>
+
     <link rel="stylesheet" href="css/style.css" media="all">
+    <link rel="stylesheet" href="css/bootstrap.min.css" media="all">
+
     <meta charset="utf-8">
     <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
     <link rel="dns-prefetch" href="//use.typekit.net">
@@ -15,13 +18,19 @@
     <meta content="320" name="MobileOptimized">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Cuckoo">
+    <meta name="apple-mobile-web-app-title" content="Team Timer">
     <meta name="format-detection" content="telephone=no">
     <meta content="initial-scale=1, user-scalable=no, width=device-width" name="viewport">
     <style>
         html {
             -webkit-text-size-adjust: 100%;
+            font-size: 62.5%; /* Sets up the Base 10 stuff */
         }
+
+        body {
+            background: #6b6de2;
+        }
+
     </style>
     <link href="/images/app-icons/apple-touch-icon-152x152.png" sizes="152x152" rel="apple-touch-icon">
     <link href="/images/app-icons/apple-touch-icon-144x144.png" sizes="144x144" rel="apple-touch-icon">
@@ -36,17 +45,17 @@
     <![endif]-->
     <meta name="description" content="Create a timer, share it with your team and get ready for more productive meetings.">
     <meta name="keywords" content="productivity, timer, remote, teams, pomodoro">
-    <meta name="application-name" content="Cuckoo">
-    <meta property="og:title" content="Join this Cuckoo Timer!">
+    <meta name="application-name" content="Team Timer">
+    <meta property="og:title" content="Join this Team Timer!">
     <meta property="og:type" content="product">
-    <meta property="og:image" content="https://cuckoo.team/images/og_image.png">
-    <meta property="og:url" content="https://cuckoo.team">
+    <meta property="og:image" content="https://Team Timer.team/images/og_image.png">
+    <meta property="og:url" content="https://Team Timer.team">
     <meta property="og:description" content="Create a timer, share it with your team and get ready for more productive meetings.">
-    <meta property="al:ios:app_name" content="Cuckoo">
+    <meta property="al:ios:app_name" content="Team Timer">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Join this Cuckoo Timer!">
+    <meta name="twitter:title" content="Join this Team Timer!">
     <meta name="twitter:description" content="Create a timer, share it with your team and get ready for more productive meetings.">
-    <meta name="twitter:image" content="https://cuckoo.team/images/og_image.png">
+    <meta name="twitter:image" content="https://Team Timer.team/images/og_image.png">
 </head>
 <body>
 <noscript>
@@ -63,7 +72,7 @@
         <form class="js-join-cuckoo-form">
             <div class="form__row">
                 <label class="label label--dark text-align-center">What's your name?</label>
-                <input class="input input--default input--dark" type="text" id="username" placeholder="i.e.: Tim Cuckoo" autofocus="autofocus">
+                <input class="input input--default input--dark" type="text" id="username" placeholder="i.e.: Team Timer" autofocus="autofocus">
             </div>
             <div class="form__row form__row--action text-align-center">
                 <button class="btn btn--submit js-onboarding-submit btn--purple js-sound-mouseHover" type="submit"></button>
@@ -76,8 +85,8 @@
     <div class="js-bubble-container bubble__container"></div>
     <div class="js-notification"></div>
     <div class="session-type"></div>
-    
-    
+
+
 
 
     <div class="timer timer--clock">
@@ -107,7 +116,7 @@
                     <div class="share">
                         <div class="share__title">URL copied!</div>
                         <div class="share__url">
-                            <input class="input input--clipboard" readonly id="js-content-clipboard" value="https://cuckoo.team/ckoSJPLuIch-">
+                            <input class="input input--clipboard" readonly id="js-content-clipboard" value="https://team-timer.com/ckoSJPLuIch-">
                             <button class="btn btn--clipboard js-copy-clipboard" data-clipboard-action="copy" data-clipboard-target="#js-content-clipboard">Copy to clipboard</button>
                         </div>
                     </div>
@@ -118,13 +127,69 @@
     </div>
     <div class="activity js-activity"></div>
 </div>
+<div class="sidebar-left ">
+    <div class="l-flex l-flex--full-height l-flex--vertical">
+        <div class= "sidebar__body l-flex l-flex--vertical l-flex--space-between l-flex--scrollable" data-sidebar-content="sessions">
+            <div class="sidebar__header">Status</div>
+
+            <div>
+                <div class="row">
+                    <div class="col-sm-2">
+                    <div class="avatar">
+                        <div class="avatar__image" data-fullname="Shohan">
+                            <span data-label="S"></span>
+                        </div>
+
+                    </div>
+                    </div>
+                    <div class="col-sm-8">
+                        <div class="progress col-sm-12">
+                            <div class="progress-bar " role="progressbar" style="width: 35%; background: purple">
+                                <span class="sr-only">55% Complete </span>
+                            </div>
+                            <div class="progress-bar  progress-bar-striped" role="progressbar" style="width: 20%; background: green">
+                                <span class="sr-only">20% Complete </span>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="row">
+                    <div class="col-sm-2">
+                        <div class="avatar">
+                            <div class="avatar__image" data-fullname="Azizul">
+                                <span data-label="A"></span>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-sm-8">
+                        <div class="progress col-sm-12">
+                            <div class="progress-bar " style="width: 45%; background: purple">
+                                <span class="sr-only">45% Complete </span>
+                            </div>
+                            <div class="progress-bar  progress-bar-striped" style="width: 30%; background: green">
+                                <span class="sr-only">30% Complete </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="sidebar js-sidebar">
     <div class="sidebar__nav">
         <div class="js-sidebar-nav sidebar__icon sidebar__icon--sessions" onclick="toggleSidebar('sessions')" title="Sessions" data-sidebar-nav="sessions">Sessions</div>
         <div class="js-sidebar-nav sidebar__icon sidebar__icon--you" onclick="toggleSidebar('you')" title="You" data-sidebar-nav="you">You</div>
-        <div class="js-sidebar-nav sidebar__icon sidebar__icon--about" onclick="toggleSidebar('about')" title="About Cuckoo">About Cuckoo</div>
+        <div class="js-sidebar-nav sidebar__icon sidebar__icon--about" onclick="toggleSidebar('about')" title="About Team Timer">About Team Timer</div>
         <div class="js-sidebar-nav sidebar__icon sidebar__icon--feedback" onclick="toggleSidebar('feedback')" title="Feedback" data-sidebar-nav="feedback">You</div>
     </div>
+
     <div class="l-flex l-flex--full-height l-flex--vertical">
         <div class="js-sidebar-content sidebar__body l-flex l-flex--vertical l-flex--space-between l-flex--scrollable" data-sidebar-content="sessions">
             <div class="sidebar__header">Sessions</div>
@@ -184,23 +249,19 @@
         </div>
         <div class="js-sidebar-content sidebar__body l-flex l-flex--vertical l-flex--space-between l-flex--scrollable" data-sidebar-content="feedback">
             <div class="sidebar__header">Send Feedback</div>
-            <div class="sidebar__paragraph sidebar__paragraph--text">Help Cuckoo by sharing your input — questions, suggestions, bug reports and feature requests are much appreciated and will help us to improve this little bird.</div>
+            <div class="sidebar__paragraph sidebar__paragraph--text">Help Team Timer by sharing your input — questions, suggestions, bug reports and feature requests are much appreciated and will help us to improve this little bird.</div>
             <form id="js-feedback">
                 <input class="sidebar__input js-username" type="text" name="name" placeholder="Your Name">
                 <input class="sidebar__input js-email" type="email" name="_replyto" placeholder="your@email.com">
-                <textarea class="sidebar__input js-feedback-text" type="text" name="feedback" placeholder="Dear Cuckoo...I have something to tell you." rows="8"></textarea>
+                <textarea class="sidebar__input js-feedback-text" type="text" name="feedback" placeholder="Dear Team Timer...I have something to tell you." rows="8"></textarea>
                 <input class="sidebar__input sidebar__input--submit" type="submit" value="SEND">
             </form>
             <div class="sidebar__paragraph" id="js-feedback-form-response"></div>
             <div class="sidebar__divisor"></div>
-            <div class="sidebar__paragraph sidebar__paragraph--text">
-                Make sure you follow Cuckoo on <a href="https://twitter.com/cuckooteam" target="_blank">Twitter</a>
-                and on <a href="https://www.facebook.com/cuckooteam/" target="_blank">Facebook</a>
-                for updates.
-            </div>
+
         </div>
         <div class="js-sidebar-content sidebar__body l-flex l-flex--vertical l-flex--space-between l-flex--scrollable" data-sidebar-content="about">
-            <div class="sidebar__header">About Cuckoo</div>
+            <div class="sidebar__header">About Team Timer</div>
             <div class="js-switcher" data-content-active="how-it-works">
                 <div>
                     <div class="sidebar__switcher">
@@ -210,9 +271,9 @@
                 </div>
                 <div class="sidebar__paragraph sidebar__paragraph--text" data-switcher-content="how-it-works">
                     <div class="sidebar__heading">Hey!</div>
-                    <div class="sidebar__subheading">Welcome to Cuckoo!</div>
+                    <div class="sidebar__subheading">Welcome to Team Timer!</div>
                     <div class="sidebar__divisor"></div>
-                    Here you'll find a simple guide for running cuckoos with your team: <br>
+                    Here you'll find a simple guide for running Team Timers with your team: <br>
                     <br>
                     <div class="sidebar__item">
                         Choose a task you'd like to get done with your team. It can be a Status meeting, Brainstorming session or anything else you want to do together. <br>
@@ -231,7 +292,7 @@
                         <br>
                     </div>
                     <div class="sidebar__item">
-                        After that, take a short break. Then you can check facebook and do other important things like go to the bathroom. After 4 cuckoos we recommend a longer break. <br>
+                        After that, take a short break. Then you can check facebook and do other important things like go to the bathroom. After 4 Team Timers we recommend a longer break. <br>
                         <br>
                     </div>
                     <div class="sidebar__item">
@@ -246,22 +307,20 @@
                 <div class="sidebar__paragraph sidebar__paragraph--text" data-switcher-content="why">
                     We believe meetings should be fun. We believe collaborating we can get further. We believe getting things done is the best motivation booster, and, we believe having fun is essential for any workplace, specially when your workplace is not just the office anymore. <br>
                     <br>
-                    That is why we created Cuckoo, a tool where you create a timer and share it with your team members. Then you are ready to have more productive meetings from anywhere. Let the time tracking for us and spend more time doing! <br>
-                    <br>Collaborate, have fun and get things done with Cuckoo.
+                    That is why we created Team Timer, a tool where you create a timer and share it with your team members. Then you are ready to have more productive meetings from anywhere. Let the time tracking for us and spend more time doing! <br>
+                    <br>Collaborate, have fun and get things done with Team Timer.
                 </div>
             </div>
         </div>
-        <div class="sidebar__body sidebar__noflex">
-            <a class="btn btn--sidebar" href="https://startae.com/?utm_source=cuckoo&amp;utm_medium=page_footer&amp;utm_content=site_link" target="_new">Meet the creators</a>
-            <a class="btn btn--sidebar" href="https://www.notion.so/startae/Cuckoo-wants-to-live-in-your-mac-6ab25ad7e9b9448282477dade167950f" target="_new">Try the macOS app!</a>
-        </div>
+
     </div>
 </div>
+<script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/socket.io.js"></script>
 <script type="text/javascript" src="js/cuckooVendor.js" defer="defer"></script>
 <script type="text/javascript" src="js/cuckoo.js" defer="defer"></script>
+
+<script src="js/bootstrap.min.js"></script>
 <!--[if lt IE 9]>
-<script src="//cdnjs.cloudflare.com/ajax/libs/nwmatcher/1.3.6/nwmatcher.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
 <![endif]-->
 </body></html>
