--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 <img src="image/anim/cat_dance2.gif" width="100">
                 <div class="row">
                     <div class="progress col-sm-12" style="margin-top: 5px; margin-left: 10px;">
-                        <div class="progress-bar " role="progressbar" style="width: 80%; background: rgb(190, 201, 255);">
+                        <div id="pet-health" class="progress-bar " role="progressbar" style="width: 80%; background: rgb(190, 201, 255);">
                             <span class="sr-only">55% Complete </span>
                         </div>
                     </div>
@@ -444,6 +444,7 @@
     $("#rating-productive").rating();
     $("#rating-physical").rating();
     $("#rating-mental").rating();
+
 </script>
 
 <!--[if lt IE 9]>
