--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
             <div class="sidebar__body sidebar__noflex" style="bottom: 0px;">
                 Your Pet
-                <img src="image/anim/cat_dance2.gif" width="100">
+                <img id='pet-gif' src="image/anim/cat_move_ball.gif" width="100">
                 <div class="row">
                     <div class="progress col-sm-12" style="margin-top: 5px; margin-left: 10px;">
                         <div id="pet-health" class="progress-bar " role="progressbar" style="width: 80%; background: rgb(190, 201, 255);">
