team status sync

--- a/index.html
+++ b/index.html
@@ -183,81 +183,11 @@
     <div class="l-flex l-flex--full-height l-flex--vertical">
         <div style="height: 100%" class= "sidebar__body l-flex l-flex--vertical l-flex--space-between l-flex--scrollable" data-sidebar-content="sessions">
             <div class="sidebar__header" style="text-align: left;">Team</div>
-            <div class="sidebar__paragraph--text">On break: 2</div>
+            <div id="break-count" class="sidebar__paragraph--text">On break: 2</div>
             <br>
 
-            <div>
-                <div class="row">
-                    <div class="col-sm-2">
-                    <div class="avatar">
-                        <div class="avatar__image" data-fullname="Shohan Working" style="background: rgba(107, 109, 226, 0.9);">
-                            <span data-label="S" style="color: white;"></span>
-                        </div>
+            <div id="team-status">
 
-                    </div>
-                    </div>
-                    <div class="col-sm-8">
-                        <div class="progress col-sm-12" style="margin-top: 5px; margin-left: 10px;">
-                            <div class="progress-bar " role="progressbar" style="width: 80%; background: rgb(190, 201, 255);">
-                                <span class="sr-only">55% Complete </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-sm-2">
-                    <div class="avatar">
-                        <div class="avatar__image" data-fullname="Masum on Break" style="background: #42a5f0">
-                            <span data-label="M" style="color: white"></span>
-                        </div>
-
-                    </div>
-                    </div>
-                    <div class="col-sm-8">
-                        <div class="progress col-sm-12" style="margin-top: 5px; margin-left: 10px;">
-                            <div class="progress-bar " role="progressbar" style="width: 70%; background: rgb(190, 201, 255);">
-                                <span class="sr-only">70% Complete </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-sm-2">
-                        <div class="avatar">
-                            <div class="avatar__image" data-fullname="Masum on Break" style="background: #42a5f0">
-                                <span data-label="M" style="color: white"></span>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="col-sm-8">
-                        <div class="progress col-sm-12" style="margin-top: 5px; margin-left: 10px;">
-                            <div class="progress-bar " role="progressbar" style="width: 70%; background: rgb(190, 201, 255);">
-                                <span class="sr-only">70% Complete </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-sm-2">
-                        <div class="avatar">
-                            <div class="avatar__image" data-fullname="Masum on Break" style="background: #42a5f0">
-                                <span data-label="M" style="color: white"></span>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="col-sm-8">
-                        <div class="progress col-sm-12" style="margin-top: 5px; margin-left: 10px;">
-                            <div class="progress-bar " role="progressbar" style="width: 70%; background: rgb(190, 201, 255);">
-                                <span class="sr-only">70% Complete </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
 
 
