presentation day changes

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             <div class="sidebar__paragraph sidebar__paragraph--text">Send your day to day productivity feedback.</div>
             <br><br>
         
-            <form action="php/feedback.php" method="POST">
+            <form action="javascript:feedback();" method="POST">
                 How energetic are you today?
             <input id="rating-mental" name="mental_health" type="text" class="rating" data-size="xs" >
             <br>
