--- a/index.html
+++ b/index.html
@@ -62,36 +62,29 @@
 
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
+        google.charts.load('current', {'packages':['gauge']});
+        google.charts.setOnLoadCallback(drawChart);
 
-      // Load the Visualization API and the corechart package.
-      google.charts.load('current', {'packages':['corechart']});
+        function drawChart() {
 
-      // Set a callback to run when the Google Visualization API is loaded.
-      google.charts.setOnLoadCallback(drawChart);
+            var data = google.visualization.arrayToDataTable([
+                ['Label', 'Value'],
+                ['2w ago', 55],
+                ['1w ago', 68],
+                ['This week', 82]
+            ]);
 
-      // Callback that creates and populates a data table,
-      // instantiates the pie chart, passes in the data and
-      // draws it.
-      function drawChart() {
+            var options = {
+                width: 400, height: 120,
+                redFrom: 0, redTo: 30,
+                yellowFrom:30, yellowTo: 70,
+                greenFrom:70, greenTo: 100,
+            };
 
-        var data = google.visualization.arrayToDataTable([
-          ['Week', 'Productivity'],
-          ['4w ago',  3.5],
-          ['3w ago',  3.8],
-          ['2w ago',  3.4],
-          ['Current',  3.95]
-        ]);
+            var chart = new google.visualization.Gauge(document.getElementById('chart_div'));
 
-        var options = {
-          title: 'Productivity History',
-          curveType: 'function',
-          legend: { position: 'bottom' }
-        };
-
-        var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
-
-        chart.draw(data, options);
-      }
+            chart.draw(data, options);
+        }
     </script>
 
 </head>
