pet chooser integrated

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/github.css" media="all">
     <link rel="stylesheet" href="css/bootstrap.min.css" media="all">
     <link rel="stylesheet" href="css/rating.css" media="all">
+    <link rel="stylesheet" href="css/w3.css">
 
     <meta charset="utf-8">
     <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
@@ -234,6 +235,16 @@
                             <input type="number" placeholder="ADD BREAK">
                         </div>
                     </form>
+                </div>
+                <div class="sidebar__sessions">
+                    <div class="sidebar__title">Choose Your Pet</div>
+                    <div class="js-sessions">
+                        <div class="sidebar__session"><img id="choose-pet" src="image/anim/pet_1.gif" style="width:100%">
+                        <button class="w3-button w3-display-left" onclick="changePet(-1)">&#10094;</button>
+                        <button class="w3-button w3-display-right" onclick="changePet(1)">&#10095;</button>
+                        </div>
+                    </div>
+
                 </div>
                 <div class="sidebar__divisor"></div>
                 <div class="sidebar__paragraph">
